Add leaderboard avatars and badges
