# backend/src/documentation/public-swagger.json
@@ -257,7 +257,7 @@
     "LeaderboardEntry": {
       "type": "object",
       "properties": {
-        "_id": {
+        "uid": {
           "type": "string",
           "example": "6226b17aebc27a4a8d1ce04b"
         },
@@ -300,6 +300,17 @@
         "timestamp": {
           "type": "integer",
           "example": 1644438189583
+        },
+        "discordAvatar": {
+          "type": "string",
+          "example": "6226b17aebc27a4a8d1ce04b"
+        },
+        "badges": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "example": ["Collaborator"]
         }
       }
     },
